stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_record_unknown_field.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/record_unknown_field.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × unknown record field
   ╭─[tests/fixtures/diagnostics/types/record_unknown_field.ml:4:30]
 3 │ fn main() {
 4 │   dbg(point { x: 1, y: 2, z: 3 })
   ·                              ┬
   ·                              ╰── `point` has no field named `z`
 5 │ }
   ╰────
  help: use one of the fields declared on the record type
